--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <style>
-        button {
-          height: 200px;
-          width: 300px;
-		  background-color: white;
-		  border-color: white;
-		  color: #333333;
-          outline: none;
-        }
-	  </style>
+		<meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/uikit.min.css" />
+        <script src="js/uikit.min.js"></script>
+        <script src="js/uikit-icons.min.js"></script>
+		<style>
+			button {
+			height: 200px;
+			width: 300px;
+			background-color: white;
+			border-color: white;
+			color: #333333;
+			outline: none;
+			}
+		</style>
 		<title>NWHacks 2019 :)</title>
     </head>
     <body>
