Use simpler approach

--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,12 @@
     <head>
 		<meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+		<script type="text/javascript" src="js/jquery-1.10.2.js"></script>
+		<script type="text/javascript" src="js/inject.js"></script>
 		<style>
-			button {
+			p {
 			height: 200px;
 			width: 300px;
-			background-color: white;
-			border-color: white;
-			color: #333333;
-			outline: none;
 			}
 			a {
 				cursor: default;
@@ -76,10 +74,6 @@
 		<title>Insite</title>
     </head>
     <body>
-			<button><h1 class="title">Welcome to Insite</h1></button>
-			<label class="switch">
-				<input type="checkbox">
-				<span class="slider round"></span>
-			</label>
+			<p id="title">Loading...</p>
     </body>
   </html>
