Added validty field in popup.

--- a/popup.html
+++ b/popup.html
@@ -74,6 +74,8 @@
 		<title>Insite</title>
     </head>
     <body>
+			<h1>Insite</h1>
+			<h3 id="validity">Validity:</h2>
 			<p id="title">Loading...</p>
     </body>
   </html>
