--- a/popup.html
+++ b/popup.html
@@ -75,7 +75,8 @@
     </head>
     <body>
 			<h1>Insite</h1>
-			<h3 id="validity">Validity:</h2>
+			<h3 id="type"></h3>
+			<h3 id="validity"></h2>
 			<p id="title">Loading...</p>
     </body>
   </html>
