--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,8 @@
 		<style>
 			p {
 			height: 200px;
-			width: 300px;
+			width: 500px;
+				line-height: 2em;
 			}
 			a {
 				cursor: default;
@@ -76,7 +77,7 @@
     <body>
 			<h1>Insite</h1>
 			<h3 id="type"></h3>
-			<h3 id="validity"></h2>
+			<h3 id="validity"></h3>
 			<p id="title">Loading...</p>
     </body>
   </html>
